--- a/app/base.html
+++ b/app/base.html
@@ -13,6 +13,17 @@
     <button class="toggle-oven" id="oven-btn-3" onclick=toggleOven(3)>Oven 3</button>
   </div>
   <div class="oven-wrapper">
-    
+    <div class="oven">
+      <div class="oven-info">
+
+      </div>
+      <div class="oven-body">
+        <div class="slot">
+          <div class="timer">
+            
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
